--- a/src/app/Modules/home/home.component.scss
+++ b/src/app/Modules/home/home.component.scss
@@ -50,10 +50,10 @@
         display: -ms-flexbox;
         display: -webkit-flex;
         display: flex;
-        -webkit-box-pack: start;
-        -ms-flex-pack: start;
-        -webkit-justify-content: start;
-        justify-content: start;
+        -webkit-box-pack: flex-start;
+        -ms-flex-pack: flex-start;
+        -webkit-justify-content: flex-start;
+        justify-content: flex-start;
         -webkit-box-align: center;
         -ms-flex-align: center;
         -webkit-align-items: center;
@@ -72,10 +72,11 @@
     background-size: 100% 100%;
     max-width: 95%;
     margin: 2rem auto;
+    display: flex;
+    justify-content: space-between;
 }
 .container__title {
     margin: 5rem;
-
     h1 {
         font-weight: 800;
         font-size: 3rem;
@@ -93,7 +94,192 @@
 .container__logo {
     padding-right: 15rem;
 }
+@media (max-width: 1665px) {
+    .container__head {
+        justify-content: flex-start;
+    }
+    .container__logo {
+        padding-right: 1rem;
+    }
+    .container__title {
+        margin-left: 5rem;
+        width: 25rem;
+    }
+    .title {
+        width: 20rem;
+    }
+    .delivery__logo img {
+        padding-left: 1rem !important;
+    }
+}
 
+@media (max-width: 1606px) {
+    .delivery__logo img {
+        height: 90%;
+        padding-left: 5rem;
+    }
+    .title {
+        width: 20rem;
+    }
+    .container__delivery a div {
+        width: 15rem;
+    }
+}
+@media (max-width: 1415px) {
+    .container__garden {
+        width: 35rem !important;
+        margin-left: 10rem;
+    }
+    .garden__logo {
+        img {
+            position: relative;
+            right: 6.5rem;
+        }
+    }
+
+    .delivery__logo {
+        width: 10rem;
+        img {
+            width: 100%;
+            height: 80%;
+            position: relative;
+            padding-left: 5rem;
+        }
+    }
+    .title {
+        margin-left: 1rem !important;
+    }
+}
+
+@media (max-width: 1150px) {
+    .container__garden {
+        max-width: 25rem;
+    }
+    .garden__logo {
+        height: 15rem;
+        width: 15rem;
+
+        img {
+            width: 10rem;
+            height: 100%;
+        }
+    }
+    .container__logo {
+        width: 80%;
+        height: 100%;
+
+        img {
+            width: 80%;
+            height: 80%;
+        }
+    }
+    .container__title {
+        margin-left: 5rem;
+        width: 20rem;
+    }
+}
+@media (max-width: 920px) {
+    .container__logo {
+        width: 60%;
+        height: 80%;
+    }
+}
+@media (max-width: 820px) {
+    .container__logo {
+        width: 40%;
+        height: 60%;
+    }
+    .container__title {
+        margin-left: 3rem;
+        width: 15rem;
+    }
+}
+@media (max-width: 710px) {
+    .container__head {
+        display: block;
+        height: 30rem;
+    }
+    .container__logo {
+        position: relative;
+        width: 20rem;
+        height: 50%;
+        left: 12rem;
+        bottom: 13rem;
+        z-index: 3;
+    }
+    .container__title {
+        margin-top: 1rem;
+        margin-left: 2rem;
+        width: 10rem;
+        h1 {
+            width: 30rem;
+        }
+        p {
+            padding: 1rem 0;
+            width: 10rem;
+        }
+    }
+}
+@media (max-width: 560px) {
+    .container__logo {
+        width: 65%;
+        left: 10rem;
+        img {
+            width: 50%;
+        }
+    }
+    .container__title {
+        h1 {
+            width: 25rem;
+        }
+        p {
+            width: 8rem;
+        }
+    }
+}
+@media (max-width: 500px) {
+    .container__head {
+        width: 30rem;
+    }
+    .container__logo {
+        width: 60%;
+        left: 12rem;
+        margin-right: 0;
+        img {
+            width: 50%;
+        }
+    }
+    .container__title {
+        h1 {
+            width: 23rem;
+        }
+        p {
+            width: 7rem;
+        }
+    }
+}
+@media (max-width: 450px) {
+    .container__logo {
+        width: 60%;
+        left: 10rem;
+        position: relative;
+        margin-right: 0;
+        height: 12rem;
+
+        img {
+            width: 50%;
+        }
+    }
+    .container__title {
+        h1 {
+            width: 21rem;
+        }
+        p {
+            width: 7rem;
+            margin-right: 0;
+        }
+    }
+}
 .container__banner {
     margin: 4rem auto;
     max-width: 90%;
@@ -108,10 +294,7 @@
     display: flex;
     align-items: center;
 }
-.delivery__logo img {
-    height: 90%;
-    padding-left: 6.2rem;
-}
+
 .title {
     font-weight: bold;
     font-size: 2rem;
@@ -135,11 +318,8 @@
     background-size: 100% 100%;
     width: 100%;
     margin-left: 1rem;
-}
-
-.garden__logo {
     display: flex;
-    align-items: center;
+    justify-content: space-between;
 }
 
 .container__list {
