--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -17,27 +17,29 @@
                     </div>
                 </ul>
             </div>
-            <div class="footer__store">
-                <p class="footer__title">Store</p>
-                <ul class="footer__list">
-                    <li><a routerLink="/aboutus">About us</a></li>
-                    <li><a routerLink="/news">News</a></li>
-                    <li><a routerLink="contacts">Contacts</a></li>
-                </ul>
-            </div>
-            <div class="footer__media">
-                <p class="footer__title">Social media</p>
-                <ul class="flex justify-content-between">
-                    <li><a href="https://www.elinext.com" target="_blank"><img class="footer__social"
-                                src="../assets/img-home/ic-facebook.png" alt="facebook"></a></li>
-                    <li><a href="https://www.elinext.com" target="_blank"><img class="footer__social"
-                                src="../assets/img-home/ic-tiktok.png" alt="tiktok"></a></li>
-                    <li><a href="https://www.elinext.com" target="_blank"><img class="footer__social"
-                                src="../assets/img-home/ic-vk.png" alt="vk"></a>
-                    </li>
-                    <li><a href="https://www.elinext.com" target="_blank"><img class="footer__social"
-                                src="../assets/img-home/ic-instagram.png" alt="instagram"></a></li>
-                </ul>
+            <div class="footer__block flex justify-content-between">
+                <div class="footer__store">
+                    <p class="footer__title">Store</p>
+                    <ul class="footer__list">
+                        <li><a routerLink="/aboutus">About us</a></li>
+                        <li><a routerLink="/news">News</a></li>
+                        <li><a routerLink="contacts">Contacts</a></li>
+                    </ul>
+                </div>
+                <div class="footer__media ">
+                    <p class="footer__title">Social media</p>
+                    <ul class="flex justify-content-between">
+                        <li><a href="https://www.elinext.com" target="_blank"><img class="footer__social"
+                                    src="../assets/img-home/ic-facebook.png" alt="facebook"></a></li>
+                        <li><a href="https://www.elinext.com" target="_blank"><img class="footer__social"
+                                    src="../assets/img-home/ic-tiktok.png" alt="tiktok"></a></li>
+                        <li><a href="https://www.elinext.com" target="_blank"><img class="footer__social"
+                                    src="../assets/img-home/ic-vk.png" alt="vk"></a>
+                        </li>
+                        <li><a href="https://www.elinext.com" target="_blank"><img class="footer__social"
+                                    src="../assets/img-home/ic-instagram.png" alt="instagram"></a></li>
+                    </ul>
+                </div>
             </div>
         </div>
         <div class="footer__line"></div>
