--- a/src/app/Modules/home/home.component.scss
+++ b/src/app/Modules/home/home.component.scss
@@ -1,33 +1,24 @@
 @import "../../../../node_modules/swiper/swiper.scss";
+@import "../../styles/variables";
+@import "../../styles/mixins";
 
 .swiper {
-    width: 100%;
-    height: 14rem;
+    @include wihi(100%, 14rem);
     margin-left: auto;
     margin-right: auto;
 }
 
 .swiper-slide {
     text-align: top;
-    background: #fff;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
+    background: $color_white;
     display: flex;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    -webkit-justify-content: center;
     justify-content: center;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    -webkit-align-items: center;
     align-items: top;
 }
 
 .swiper-slide img {
     display: block;
-    width: 100%;
-    height: 100%;
+    @include wihi(100%, 100%);
     object-fit: cover;
 }
 
@@ -37,33 +28,22 @@
 }
 .container__h {
     .swiper {
-        width: 100%;
-        height: 30rem;
+        @include wihi(100%, 30rem);
     }
     .container__head {
         width: 100%;
     }
     .swiper-slide {
         text-align: top;
-        background: #fff;
-        display: -webkit-box;
-        display: -ms-flexbox;
-        display: -webkit-flex;
+        background: $color_white;
         display: flex;
-        -webkit-box-pack: flex-start;
-        -ms-flex-pack: flex-start;
-        -webkit-justify-content: flex-start;
         justify-content: flex-start;
-        -webkit-box-align: center;
-        -ms-flex-align: center;
-        -webkit-align-items: center;
         align-items: top;
     }
 
     .swiper-slide img {
         display: block;
-        width: 100%;
-        height: 100%;
+        @include wihi(100%, 100%);
         object-fit: cover;
     }
 }
@@ -71,35 +51,204 @@
     background: url("../../../assets/img-home/Rectangle\ 1.png") 0 0 no-repeat;
     background-size: 100% 100%;
     max-width: 95%;
-    margin: 2rem auto;
+    margin: $pt auto;
     display: flex;
     justify-content: space-between;
 }
 .container__title {
     margin: 5rem;
     h1 {
-        font-weight: 800;
-        font-size: 3rem;
-        line-height: 120%;
-        color: #404040;
+        @include font(Montserrat, normal, 800, 3rem, 120%, 0em, #404040);
     }
     p {
-        font-weight: 500;
-        font-size: 1.8rem;
-        line-height: 150%;
-        color: #404040;
+        @include font(Montserrat, normal, 500, 1.8rem, 150%, 0em, #404040);
         padding: 3rem 0;
     }
 }
 .container__logo {
     padding-right: 15rem;
 }
+
+.container__banner {
+    margin: 4rem auto;
+    max-width: 90%;
+}
+.container__delivery {
+    background: url("../../../assets/img-home/Rectangle\ 3.png") 0 0 no-repeat;
+    background-size: 100% 100%;
+    width: 50%;
+}
+
+.delivery__logo {
+    display: flex;
+    align-items: center;
+}
+
+.title {
+    @include font(Montserrat, normal, 700, $pt, 120%, 0em, #404040);
+    margin: 4rem 0 $pt 4rem;
+}
+.container__linking {
+    @include font(Montserrat, normal, normal, 1.2rem, 150%, 0em, #404040);
+    margin-left: 4rem;
+    &:hover {
+        color: #ff5d7d;
+    }
+}
+
+.container__garden {
+    background: url("../../../assets/img-home/Rectangle\ 4.png") 0 0 no-repeat;
+    background-size: 100% 100%;
+    width: 100%;
+    margin-left: $pb;
+    @extend %flex;
+}
+
+.container__list {
+    width: 90%;
+    margin: 0 auto;
+}
+.container__block {
+    @include wihi(15rem, 10rem);
+    margin-right: 0;
+    & a {
+        max-height: 100%;
+        width: 15rem;
+        display: block;
+
+        & img {
+            @include wihi(5rem, 5rem);
+            display: block;
+            margin: $pw auto;
+        }
+        & p {
+            text-align: center;
+            margin-top: $pb;
+            font-size: $pb;
+            line-height: 150%;
+            color: #b4b4b4;
+        }
+    }
+}
+h6 {
+    @include font(Montserrat, normal, 500, 1.2rem, 150%, 0em, #404040);
+    width: 15rem;
+    text-align: center;
+}
+.container__beauties {
+    @include font(Montserrat, normal, 700, $pt, 120%, 0em, #404040);
+    width: 90%;
+    margin: 5rem auto 3rem;
+}
+.container__items {
+    width: 90%;
+    margin: 0 8rem;
+    flex-wrap: wrap;
+}
+.container__wrap {
+    flex: 1 0 21%;
+    margin-bottom: 3rem;
+}
+.container__item {
+    opacity: 0.7;
+    transition: opacity 1s linear;
+    @include wihi(18rem, 28rem);
+    border: 1px solid #e7e7e7;
+    box-sizing: border-box;
+    border-radius: 10px;
+    padding-bottom: $pb;
+    position: relative;
+
+    img {
+        width: 80%;
+        margin: $pw;
+    }
+    h5 {
+        @include font(Montserrat, normal, 700, $pw, 120%, 0em, #404040);
+        margin: 0 $pw;
+    }
+    & > p {
+        @include font(Montserrat, normal, 700, $pw, 120%, 0em, #404040);
+        margin: 0 $pw;
+        position: absolute;
+        top: 25rem;
+    }
+    button {
+        display: none;
+        transition: opacity 1s linear;
+    }
+}
+.opacity {
+    @include font(Montserrat, normal, 500, $pb, 150%, 0em, #b4b4b4);
+    margin: 0 $pw;
+    text-align: left;
+}
+.container__item:hover {
+    transition: 1s;
+    opacity: 1;
+    @include wihi(18rem, 35rem);
+    position: absolute;
+    z-index: 2;
+    background-color: $color_white;
+    box-sizing: border-box;
+    box-shadow: 0px 10px 25px rgba(0, 0, 0, 0.1);
+    button {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        @include wihi(15rem, 4rem);
+        background: #5e9e5e;
+        border-radius: 10px;
+        margin: 8rem auto 0;
+        img {
+            width: 1.4rem;
+        }
+        p {
+            @include font(Montserrat, normal, 600, 1.2rem, 100%, 0.05em, $color_white);
+            text-align: left;
+            margin-right: 1.2rem;
+        }
+    }
+}
+
+.container__button {
+    display: block;
+    @include wihi(18rem, 4rem);
+    margin: 0 auto 6rem;
+    border: 1px solid #5e9e5e;
+    border-radius: 10px;
+    background-color: $color_white;
+
+    p {
+        @include font(Montserrat, normal, 600, 1.2rem, 110%, 0.05em, #5e9e5e);
+        text-transform: uppercase;
+        margin: 0 auto;
+    }
+}
+.container__information {
+    width: 90%;
+    margin: 0 auto;
+    p {
+        @include font(Montserrat, normal, normal, 1.2rem, 170%, 0em, #404040);
+        margin: $pb auto;
+    }
+}
+.color {
+    font-weight: bold;
+    font-size: 2.5rem;
+    line-height: 110%;
+    background: linear-gradient(90deg, #ff5d7d 0%, #7b61ff 100%);
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+    margin-bottom: 2rem;
+}
 @media (max-width: 1665px) {
     .container__head {
         justify-content: flex-start;
     }
     .container__logo {
-        padding-right: 1rem;
+        padding-right: $pb;
     }
     .container__title {
         margin-left: 5rem;
@@ -109,7 +258,7 @@
         width: 20rem;
     }
     .delivery__logo img {
-        padding-left: 1rem !important;
+        padding-left: $pb !important;
     }
 }
 
@@ -140,14 +289,43 @@
     .delivery__logo {
         width: 10rem;
         img {
-            width: 100%;
-            height: 80%;
+            @include wihi(100%, 80%);
             position: relative;
             padding-left: 5rem;
         }
     }
     .title {
-        margin-left: 1rem !important;
+        margin-left: $pb !important;
+    }
+}
+@media (max-width: 1296px) {
+    .container__items {
+        width: 100%;
+        margin: 0 8rem;
+        flex-wrap: wrap;
+    }
+    .container__wrap {
+        flex: 1 1 50% !important;
+        margin-bottom: 3rem;
+    }
+    .container__garden {
+        width: 35rem !important;
+        margin-left: $pt;
+    }
+    .garden__logo {
+        img {
+            position: relative;
+            right: 6.5rem;
+        }
+    }
+
+    .delivery__logo {
+        width: 10rem;
+        img {
+            @include wihi(100%, 80%);
+            position: relative;
+            padding-left: 5rem;
+        }
     }
 }
 
@@ -156,38 +334,68 @@
         max-width: 25rem;
     }
     .garden__logo {
-        height: 15rem;
-        width: 15rem;
-
+        @include wihi(15rem, 15rem);
         img {
-            width: 10rem;
-            height: 100%;
+            @include wihi(10rem, 100%);
         }
     }
     .container__logo {
-        width: 80%;
-        height: 100%;
-
+        @include wihi(80%, 100%);
         img {
-            width: 80%;
-            height: 80%;
+            @include wihi(80%, 80%);
         }
     }
     .container__title {
         margin-left: 5rem;
         width: 20rem;
     }
+    .container__delivery {
+        max-width: 25rem;
+    }
+    .delivery__logo {
+        width: 10rem;
+        img {
+            @include wihi(90%, 80%);
+            position: relative;
+            right: 3.5rem;
+        }
+    }
+    .title {
+        margin-top: $pb !important;
+    }
+    .container__linking {
+        margin-left: $pb !important;
+    }
 }
 @media (max-width: 920px) {
     .container__logo {
-        width: 60%;
-        height: 80%;
+        @include wihi(60%, 80%);
+    }
+    .container__banner {
+        display: block !important;
+    }
+    .container__delivery {
+        margin-bottom: $pt;
+        height: 15rem;
+        margin-left: $pb;
+        min-width: 25rem;
+    }
+    .container__garden {
+        margin-left: $pb;
     }
 }
 @media (max-width: 820px) {
+    .container__items {
+        width: 100%;
+        margin: 0 4rem !important;
+        flex-wrap: wrap;
+    }
+    .container__wrap {
+        flex: 1 0 50% !important;
+        margin-bottom: 3rem;
+    }
     .container__logo {
-        width: 40%;
-        height: 60%;
+        @include wihi(40%, 60%);
     }
     .container__title {
         margin-left: 3rem;
@@ -195,28 +403,92 @@
     }
 }
 @media (max-width: 710px) {
+    .container__items {
+        width: 100%;
+        margin: 0 $pb !important;
+        display: block !important;
+    }
+    .container__wrap {
+        margin-bottom: 3rem !important;
+    }
     .container__head {
         display: block;
         height: 30rem;
     }
     .container__logo {
         position: relative;
-        width: 20rem;
-        height: 50%;
+        @include wihi(20rem, 50%);
         left: 12rem;
         bottom: 13rem;
         z-index: 3;
     }
     .container__title {
-        margin-top: 1rem;
-        margin-left: 2rem;
+        margin-top: $pb;
+        margin-left: $pt;
         width: 10rem;
         h1 {
             width: 30rem;
         }
         p {
-            padding: 1rem 0;
+            padding: $pb 0;
             width: 10rem;
+        }
+    }
+    .container__item > p {
+        @include font(Montserrat, normal, bold, $pw, 120%, 0em, #404040);
+        margin: 0 $pw;
+        position: static !important;
+        top: 0 !important;
+    }
+    .container__item {
+        position: static !important;
+        opacity: 1 !important;
+        width: 22rem !important;
+        height: 30rem !important;
+        background-color: $color_white;
+        box-sizing: border-box;
+
+        button {
+            display: flex !important;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+            @include wihi(15rem, 4rem);
+            background: #5e9e5e;
+            border-radius: 10px;
+            margin: 0 auto;
+            img {
+                width: 1.4rem;
+            }
+            p {
+                @include font(Montserrat, normal, 600, 1.2rem, 100%, 0.05em, $color_white);
+                text-align: left;
+                margin-right: 1.2rem;
+            }
+        }
+    }
+    .container__item:hover {
+        @include wihi(18rem, 30rem);
+        background-color: $color_white;
+        box-sizing: border-box;
+
+        button {
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+            @include wihi(15rem, 4rem);
+            background: #5e9e5e;
+            border-radius: 10px;
+            margin: 0 auto !important;
+            img {
+                width: 1.4rem;
+            }
+            p {
+                @include font(Montserrat, normal, 600, 1.2rem, 100%, 0.05em, $color_white);
+                text-align: left;
+                margin-right: 1.2rem;
+            }
         }
     }
 }
@@ -259,13 +531,14 @@
     }
 }
 @media (max-width: 450px) {
+    .container__banner {
+        margin-left: 0 !important;
+    }
     .container__logo {
-        width: 60%;
+        @include wihi(60%, 12rem);
         left: 10rem;
         position: relative;
         margin-right: 0;
-        height: 12rem;
-
         img {
             width: 50%;
         }
@@ -279,216 +552,4 @@
             margin-right: 0;
         }
     }
-}
-.container__banner {
-    margin: 4rem auto;
-    max-width: 90%;
-}
-.container__delivery {
-    background: url("../../../assets/img-home/Rectangle\ 3.png") 0 0 no-repeat;
-    background-size: 100% 100%;
-    width: 50%;
-}
-
-.delivery__logo {
-    display: flex;
-    align-items: center;
-}
-
-.title {
-    font-weight: bold;
-    font-size: 2rem;
-    line-height: 120%;
-    color: #404040;
-    margin: 4rem 0 2rem 4rem;
-}
-.container__linking {
-    font-weight: normal;
-    font-size: 1.2rem;
-    line-height: 150%;
-    color: #404040;
-    margin-left: 4rem;
-    &:hover {
-        color: #ff5d7d;
-    }
-}
-
-.container__garden {
-    background: url("../../../assets/img-home/Rectangle\ 4.png") 0 0 no-repeat;
-    background-size: 100% 100%;
-    width: 100%;
-    margin-left: 1rem;
-    display: flex;
-    justify-content: space-between;
-}
-
-.container__list {
-    width: 90%;
-    margin: 0 auto;
-}
-.container__block {
-    height: 10rem;
-    width: 15rem;
-    margin-right: 0;
-    & a {
-        max-height: 100%;
-        width: 15rem;
-        display: block;
-
-        & img {
-            height: 5rem;
-            width: 5rem;
-            display: block;
-            margin: 1.5rem auto;
-        }
-        & p {
-            text-align: center;
-            margin-top: 1rem;
-            font-size: 1rem;
-            line-height: 150%;
-            color: #b4b4b4;
-        }
-    }
-}
-h6 {
-    font-weight: 500;
-    font-size: 1.2rem;
-    line-height: 150%;
-    color: #404040;
-    width: 15rem;
-    text-align: center;
-}
-.container__beauties {
-    width: 90%;
-    margin: 5rem auto 3rem;
-    font-weight: bold;
-    font-size: 2rem;
-    line-height: 120%;
-    color: #404040;
-}
-.container__items {
-    width: 90%;
-    margin: 0 8rem;
-    flex-wrap: wrap;
-}
-.container__wrap {
-    flex: 1 0 21%;
-    margin-bottom: 3rem;
-}
-.container__item {
-    opacity: 0.7;
-    transition: opacity 1s linear;
-    width: 18rem;
-    height: 28rem;
-    border: 1px solid #e7e7e7;
-    box-sizing: border-box;
-    border-radius: 10px;
-    padding-bottom: 1rem;
-    position: relative;
-
-    img {
-        width: 80%;
-        margin: 1.5rem;
-    }
-    h5 {
-        font-weight: bold;
-        font-size: 1.2rem;
-        line-height: 120%;
-        color: #404040;
-        margin: 0 1.5rem;
-    }
-    & > p {
-        font-weight: bold;
-        font-size: 1.5rem;
-        line-height: 120%;
-        color: #404040;
-        margin: 0 1.5rem;
-        position: absolute;
-        top: 25rem;
-    }
-    button {
-        display: none;
-        transition: opacity 1s linear;
-    }
-}
-.opacity {
-    font-weight: 500;
-    font-size: 1rem;
-    line-height: 150%;
-    color: #b4b4b4;
-    margin: 0 1.5rem;
-    text-align: left;
-}
-.container__item:hover {
-    transition: 1s;
-    opacity: 1;
-    width: 18rem;
-    height: 35rem;
-    position: absolute;
-    z-index: 2;
-    background-color: #fff;
-    box-sizing: border-box;
-    box-shadow: 0px 10px 25px rgba(0, 0, 0, 0.1);
-    button {
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        align-items: center;
-        width: 15rem;
-        height: 4rem;
-        background: #5e9e5e;
-        border-radius: 10px;
-        margin: 8rem auto 0;
-        img {
-            width: 1.4rem;
-        }
-        p {
-            font-weight: 600;
-            font-size: 1.2rem;
-            line-height: 100%;
-            text-align: left;
-            letter-spacing: 0.05em;
-            color: #ffffff;
-            margin-right: 1.2rem;
-        }
-    }
-}
-
-.container__button {
-    display: block;
-    width: 18rem;
-    height: 4rem;
-    margin: 0 auto 6rem;
-    border: 1px solid #5e9e5e;
-    border-radius: 10px;
-    background-color: #fff;
-
-    p {
-        font-weight: 600;
-        font-size: 1.2rem;
-        line-height: 110%;
-        letter-spacing: 0.05em;
-        text-transform: uppercase;
-        color: #5e9e5e;
-        margin: 0 auto;
-    }
-}
-.container__information {
-    width: 90%;
-    margin: 0 auto;
-    p {
-        font-size: 1.2rem;
-        line-height: 170%;
-        color: #404040;
-        margin: 1rem auto;
-    }
-}
-.color {
-    font-weight: bold;
-    font-size: 2.5rem;
-    line-height: 110%;
-    background: linear-gradient(90deg, #ff5d7d 0%, #7b61ff 100%);
-    background-clip: text;
-    -webkit-text-fill-color: transparent;
-    margin-bottom: 2rem;
 }
