--- a/src/app/Modules/news/newsarticle/newsarticle.component.scss
+++ b/src/app/Modules/news/newsarticle/newsarticle.component.scss
@@ -121,3 +121,14 @@
     display: flex;
     align-items: center;
 }
+@media (max-width: 1200px) {
+    .container__text,
+    .container__text1 {
+        width: 100%;
+    }
+    .container__img3 {
+        img {
+            width: 100%;
+        }
+    }
+}
