--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,13 +1,15 @@
+@import "../styles/_variables.scss";
+@import "../styles/_mixins.scss";
+
 .header {
+    @extend %flex;
     position: sticky;
     top: 0;
     z-index: 99;
-    background-color: #fff;
+    background-color: $color_white;
     width: 100%;
     margin: 0 auto;
-    display: flex;
-    justify-content: space-between;
-    padding: 2rem 7rem;
+    padding: $pt 7rem;
     height: 8rem;
 }
 .header__popup {
@@ -26,77 +28,65 @@
 .first-image {
     height: 3.5rem;
     padding-right: 0.8rem;
-    margin-bottom: 2rem;
+    margin-bottom: $pt;
 }
 .second-image {
     height: 3rem;
     transform: scale(1.2);
-    padding-top: 1rem;
+    padding-top: $pb;
 }
 .header__menu {
     width: 80%;
-    padding-top: 1rem;
+    padding-top: $pb;
 }
 .header__icon {
     width: 25%;
 }
 .header__list li a {
-    font-family: Montserrat;
-    font-style: normal;
-    font-weight: 600;
-    font-size: 1.4rem;
-    line-height: 150%;
-    letter-spacing: 0.05em;
+    @include font(Montserrat, normal, 600, 1.4rem, 150%, 0.05em, black);
     text-transform: uppercase;
-    color: black;
     &.active {
         color: red;
         background: url("../../assets/img-home/Rectangle2.png") center bottom no-repeat;
         background-size: 3.2rem 0.4rem;
-        padding-bottom: 1rem;
+        padding-bottom: $pb;
     }
     &:hover {
         color: red;
         background: url("../../assets/img-home/Rectangle2.png") center bottom no-repeat;
         background-size: 3.2rem 0.4rem;
-        padding-bottom: 1rem;
+        padding-bottom: $pb;
     }
 }
 .header__icon li a {
     &.active {
         background: url("../../assets/img-home/search-red.png") 0 0.4rem no-repeat,
             url("../../assets/img-home/Rectangle2.png") 0 2.3rem no-repeat;
-        padding-bottom: 1rem;
+        padding-bottom: $pb;
     }
 }
 .header__icon li a.header__search:hover {
     background: url("../../assets/img-home/search-red.png") 0 0.4rem no-repeat,
         url("../../assets/img-home/Rectangle2.png") 0 2.3rem no-repeat;
-    padding-bottom: 1rem;
+    padding-bottom: $pb;
 }
 .header__search {
     background: url("../../assets/img-home/search.png") 0 0.4rem no-repeat;
-    width: 2rem;
-    height: 3rem;
-    display: inline-block;
-    transform: scale(1.5);
+    @extend %width;
 }
 
 .header__bag {
     background: url("../../assets/img-home/shopping-bag.png") 0 0.4rem no-repeat;
-    width: 2rem;
-    height: 3rem;
-    display: inline-block;
-    transform: scale(1.5);
+    @extend %width;
 }
 .header__icon li a.header__bag:hover {
     background: url("../../assets/img-home/shopping-bag-red.png") 0 0.4rem no-repeat,
         url("../../assets/img-home/Rectangle2.png") 0 2.3rem no-repeat;
-    padding-bottom: 1rem;
+    padding-bottom: $pb;
 }
 .header__quantity {
     display: inline-block;
-    color: #fff;
+    color: $color_white;
     position: relative;
     top: -0.2rem;
     left: 1rem;
@@ -106,20 +96,17 @@
     padding: 6px 5px;
     line-height: 50%;
     vertical-align: top;
-    font-size: 1rem;
+    font-size: $pb;
     background-color: rgba(255, 93, 125, 1);
 }
 .header__user {
     background: url("../../assets/img-home/user.png") 0 0.4rem no-repeat;
-    width: 2rem;
-    height: 3rem;
-    display: inline-block;
-    transform: scale(1.5);
+    @extend %width;
 }
 .header__icon li a.header__user:hover {
     background: url("../../assets/img-home/user-red.png") 0 0.4rem no-repeat,
         url("../../assets/img-home/Rectangle2.png") 0 2.3rem no-repeat;
-    padding-bottom: 1rem;
+    padding-bottom: $pb;
 }
 
 @media (max-width: 1400px) {
@@ -155,7 +142,7 @@
         top: 2.5rem;
         left: 2.5rem;
         .burger {
-            background-color: #fff;
+            background-color: $color_white;
         }
         .burger:hover {
             box-shadow: 2px 2px 3px grey;
@@ -167,7 +154,7 @@
             box-shadow: 1px 1px 2px grey;
         }
         .close {
-            background-color: #fff;
+            background-color: $color_white;
         }
         .close:hover {
             box-shadow: 2px 2px 3px grey;
@@ -193,14 +180,8 @@
             margin-bottom: 4rem;
         }
         & li a {
-            font-family: Montserrat;
-            font-style: normal;
-            font-weight: 600;
-            font-size: 1.4rem;
-            line-height: 150%;
-            letter-spacing: 0.05em;
+            @include font(Montserrat, normal, 600, 1.4rem, 150%, 0.05em, #404040);
             text-transform: uppercase;
-            color: #404040;
         }
         & li a:hover {
             color: #ff5d7d;
@@ -214,12 +195,12 @@
     }
     .header__icon {
         width: 10rem;
-        margin-left: 2rem;
+        margin-left: $pt;
     }
     .header {
         width: 100%;
         justify-content: space-between;
-        padding: 2rem 2rem;
+        padding: $pt $pt;
     }
     .header__menu {
         display: flex;
@@ -236,7 +217,7 @@
     .header {
         width: 100%;
         justify-content: space-between;
-        padding-top: 2rem;
+        padding-top: $pt;
         margin: 0 auto;
     }
     .header__logo {
@@ -249,7 +230,7 @@
         left: 0.5rem;
     }
     .header__logo {
-        margin-left: 2rem;
+        margin-left: $pt;
         margin-right: 0;
     }
     .header {
@@ -265,9 +246,9 @@
         padding: 0;
         width: 5rem;
         li {
-            margin-right: 1.5rem;
+            margin-right: $pw;
 
-            width: 1.5rem;
+            width: $pw;
             a {
                 margin: 0;
                 padding: 0;
@@ -275,33 +256,29 @@
         }
     }
     .header__search {
-        width: 1.5rem;
+        width: $pw;
         transform: scale(1);
-        margin-right: 1rem;
+        margin-right: $pb;
     }
     .header__bag {
-        width: 1.5rem;
+        width: $pw;
         transform: scale(1);
-        margin-right: 1rem;
+        margin-right: $pb;
     }
     .header__user {
-        width: 1.5rem;
+        width: $pw;
         transform: scale(1);
     }
 }
 @media (max-width: 450px) {
-    .header__search {
-        width: 1.5rem;
-        transform: scale(1);
-        margin-right: 1rem;
-    }
+    .header__search,
     .header__bag {
-        width: 1.5rem;
+        width: $pw;
         transform: scale(1);
-        margin-right: 1rem;
+        margin-right: $pb;
     }
     .header__user {
-        width: 1.5rem;
+        width: $pw;
         transform: scale(1);
     }
     .header__icon {
@@ -311,8 +288,8 @@
         padding: 0;
         width: 5rem;
         li {
-            margin-right: 1rem;
-            width: 1.5rem;
+            margin-right: $pb;
+            width: $pw;
             a {
                 margin: 0;
                 padding: 0;
@@ -320,7 +297,7 @@
         }
     }
     .header__logo {
-        margin-right: 1rem;
+        margin-right: $pb;
         width: 11rem;
         padding-right: 0;
     }
