--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -34,7 +34,7 @@
                         <span class="header__quantity">10</span>
                     </a>
                 </li>
-                <li><a class="header__user " (click)='toggleUser()' routerLink="/" routerLinkActive="active"
+                <li><a class="header__user " (click)='toggleUser()' routerLink="" routerLinkActive="active"
                         [routerLinkActiveOptions]="{exact:true}"></a></li>
             </div>
         </ul>
@@ -51,17 +51,17 @@
             </li>
         </ul>
     </div>
-    <div>
+    <div class="users">
         <ul class="user" [hidden]="isMenu">
             <li>
                 <a href="">
-                    <span>MY ORDERS</span>
-                    <span>10</span>
+                    <span class="user__text">MY ORDERS</span>
+                    <p class="user__number"> <span>10</span></p>
                 </a>
             </li>
-            <li><a href="">MANAGE MY ACCOUNT</a></li>
+            <li><a href="" class="user__text">MANAGE MY ACCOUNT</a></li>
             <div class="line"></div>
-            <li><a href="">LOG OUT</a></li>
+            <li><a href="" class="user__text">LOG OUT</a></li>
         </ul>
     </div>
 
