--- a/src/app/Modules/home/home.component.html
+++ b/src/app/Modules/home/home.component.html
@@ -34,34 +34,23 @@
                 </ng-template>
             </swiper>
         </div>
-
         <div class="container__banner flex justify-content-between ">
-
-            <div class="container__delivery flex ">
-                <a href="https://www.elinext.com" target="_blank" class="flex justify-content-between">
-                    <div>
-                        <div class="container__deliverys title">
-                            Flower delivery in Minsk
-                        </div>
-                        <a class="container__linking" href="">More details</a>
-                    </div>
-                    <div class="delivery__logo">
-                        <img src="../../../assets/img-home/car.jpg" alt="car">
-                    </div>
-                </a>
-            </div>
-
-            <a href="https://www.elinext.com" target="_blank">
-                <div class="container__garden ">
-                    <div>
-                        <div class="container__gardens title">
-                            Everything for your garden
-                        </div>
-                        <a class="container__linking" href="">Discounts up to 50%</a>
-                    </div>
-                    <div class="garden__logo">
-                        <img src="../../../assets/img-home/Frame 11.png" alt="garden">
-                    </div>
+            <a href="https://www.elinext.com" target="_blank" class="container__delivery flex justify-content-between">
+                <div class="container__deliverys">
+                    <p class=" title">Flower delivery in Minsk</p>
+                    <p><a class="container__linking" href="">More details</a></p>
+                </div>
+                <div class="delivery__logo">
+                    <img src="../../../assets/img-home/car.jpg" alt="car">
+                </div>
+            </a>
+            <a href="https://www.elinext.com" target="_blank" class="container__garden flex justify-content-between">
+                <div class="container__gardens ">
+                    <p class=" title">Everything for your garden</p>
+                    <p><a class="container__linking" href="">Discounts up to 50%</a></p>
+                </div>
+                <div class="garden__logo">
+                    <img id="garden-image" src="../../../assets/img-home/FRa.png" alt="garden">
                 </div>
             </a>
         </div>
