--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -26,7 +26,7 @@
                     [routerLinkActiveOptions]="{exact:true}">NEWS</a></li>
             <li class="menu"><a routerLink="/contacts" routerLinkActive="active"
                     [routerLinkActiveOptions]="{exact:true}">CONTACTS</a></li>
-            <div class=" header__icon flex justify-content-between">
+            <div class=" header__icon flex justify-content-end">
                 <li><a class="header__search " (click)='toggleDisplays()' routerLink="/search" routerLinkActive="active"
                         [routerLinkActiveOptions]="{exact:true}"></a> </li>
                 <li>
@@ -64,5 +64,4 @@
             <li><a href="" class="user__text">LOG OUT</a></li>
         </ul>
     </div>
-
 </header>
